--- a/app/views/dashboard/book_container.html.erb
+++ b/app/views/dashboard/book_container.html.erb
@@ -1,37 +1,25 @@
 <style>
-  #marco{
-    background: mediumblue;
-    height: 950px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    color: white;
+  #border{
+    background: #730E15;
+    height: 500px;
+    z-index: 1;
+    padding: 40px;
   }
+
 </style>
-<script>
-    $(document).ready(function(){
 
-        var txt=""
-        for (var i=1; i<=500; i++){
-           txt= txt+"  abcEnglish";
-        }
-        $("#letter").text(txt.toString());
-    });
-</script>
+<div id="border" >
+  <%= render 'dashboard/page1_partial' %>
+</div>
 
-<div class="container" id="marco" >
-      <div id="letter">
-      </div>
-
-  <div class="fixed-action-btn horizontal">
-    <a class="btn-floating btn-large red">
-      <i class="large material-icons">mode_edit</i>
-    </a>
-    <ul>
-      <li><a class="btn-floating red"><i class="material-icons">keyboard_arrow_left</i></a></li>
-      <li><a class="btn-floating yellow darken-1"><i class="material-icons">keyboard_arrow_right</i> </a></li>
-      <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
-      <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
-    </ul>
-  </div>
-
+<div class="fixed-action-btn horizontal">
+  <a class="btn-floating btn-large red">
+    <i class="large material-icons">mode_edit</i>
+  </a>
+  <ul>
+    <li><a class="btn-floating red"><i class="material-icons">keyboard_arrow_left</i></a></li>
+    <li><a class="btn-floating yellow darken-1"><i class="material-icons">keyboard_arrow_right</i> </a></li>
+    <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
+    <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+  </ul>
 </div>
