superposicion more less

--- a/app/views/dashboard/page1.html.erb
+++ b/app/views/dashboard/page1.html.erb
@@ -1,10 +1,20 @@
 <style>
+  #borde{
+    background: darkred;
+    position: absolute;
+    z-index: 0;
+    height: 600px;
+    width: 600px;
+
+  }
 #page{
 background: #63e25b;
 z-index: 2;
 height: 250px;
 }
 </style>
+<div id="borde">
+</div>
 
 <div id="page">
 </div>
