add partial in page1 and page2

--- a/app/views/dashboard/_border_partial.html.erb
+++ b/app/views/dashboard/_border_partial.html.erb
@@ -1,14 +1,16 @@
 <style>
-  #border{
-    background: #730E15;
-    height: 500px;
-    z-index: 1;
-    padding: 40px;
+  #borde{
+    background: darkred;
+    position: absolute;
+    z-index: 0;
+    height: 600px;
+    width: 600px;
+
   }
 
 </style>
 
-<div id="border" >
+<div id="borde">
 </div>
 
 <div class="fixed-action-btn horizontal">
