--- a/app/views/dashboard/page1.html.erb
+++ b/app/views/dashboard/page1.html.erb
@@ -1,20 +1,17 @@
 <style>
-  #borde{
-    background: darkred;
-    position: absolute;
-    z-index: 0;
-    height: 600px;
-    width: 600px;
 
-  }
 #page{
-background: #63e25b;
-z-index: 2;
-height: 250px;
+  background: #63e25b;
+  z-index: 1;
+  height: 250px;
+  position: absolute;
+  height: 300px;
+  width: 300px;
+  top: 100px;
+  left: 100px;
 }
 </style>
-<div id="borde">
-</div>
 
+ <%=render 'dashboard/border_partial'%>
 <div id="page">
 </div>
