--- a/app/views/dashboard/page2.html.erb
+++ b/app/views/dashboard/page2.html.erb
@@ -1,10 +1,16 @@
 <style>
+
   #page{
-    background: #3127e2;
-    z-index: 2;
+    background: blue;
+    z-index: 1;
     height: 250px;
+    position: absolute;
+    height: 300px;
+    width: 300px;
+    top: 100px;
+    left: 100px;
   }
 </style>
-
+<%=render 'dashboard/border_partial'%>
 <div id="page">
 </div>
