--- a/app/views/dashboard/_border_partial.html.erb
+++ b/app/views/dashboard/_border_partial.html.erb
@@ -18,8 +18,8 @@
     <i class="large material-icons">mode_edit</i>
   </a>
   <ul>
-    <li><a class="btn-floating red"><i class="material-icons">keyboard_arrow_left</i></a></li>
-    <li><a class="btn-floating yellow darken-1"><i class="material-icons">keyboard_arrow_right</i> </a></li>
+    <li><a href='page1' class="btn-floating red"><i class="material-icons">keyboard_arrow_left</i></a></li>
+    <li><a href='page2' class="btn-floating yellow darken-1"><i class="material-icons">keyboard_arrow_right</i> </a></li>
     <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
     <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
   </ul>
