change width of page 1 and page 2

--- a/app/views/dashboard/page2.html.erb
+++ b/app/views/dashboard/page2.html.erb
@@ -5,8 +5,8 @@
     z-index: 1;
     height: 250px;
     position: absolute;
-    height: 300px;
-    width: 300px;
+    height: 400px;
+    width: 80%;
     top: 100px;
     left: 100px;
   }
