--- a/app/views/dashboard/page1.html.erb
+++ b/app/views/dashboard/page1.html.erb
@@ -1,17 +1,17 @@
 <style>
 
-#page{
-  background: #63e25b;
-  z-index: 1;
-  height: 250px;
-  position: absolute;
-  height: 300px;
-  width: 80%;
-  top: 100px;
-  left: 100px;
-}
+  #page{
+    background: yellow;
+    z-index: 1;
+    height: 250px;
+    position: absolute;
+    height: 400px;
+    width: 80%;
+    top: 100px;
+    left: 100px;
+  }
 </style>
-
- <%=render 'dashboard/border_partial'%>
+<%=render 'dashboard/border_partial'%>
 <div id="page">
+  <h1>HOJA 1 </h1>
 </div>
