--- a/app/views/dashboard/_border_partial.html.erb
+++ b/app/views/dashboard/_border_partial.html.erb
@@ -3,9 +3,9 @@
 <div id="borde">
 </div>
 
-<%= link_to "rigth", :controller => "calculator", :action => "right" %>
+<%= link_to "rigth", :controller => "dashboard", :action => "right" %>
 
-<%= link_to "left", :controller => "calculator", :action => :left %>
+<%= link_to "left", :controller => "dashboard", :action => :left %>
 
 <div class="fixed-action-btn horizontal">
   <a class="btn-floating btn-large red">
