--- a/app/views/dashboard/_border_partial.html.erb
+++ b/app/views/dashboard/_border_partial.html.erb
@@ -12,12 +12,8 @@
     <i class="large material-icons">mode_edit</i>
   </a>
   <ul>
-    <%= form_tag(controller: "calculator", action:"right", method: "post") do %>
-      <li><a class="btn-floating red"><i class="material-icons"><%= submit_tag("right") %>keyboard_arrow_left</i></a></li>
-    <% end %>
-    <%= form_tag(controller: "calculator", action:"left", method: "post") do %>
-      <li><a  class="btn-floating yellow darken-1"><i class="material-icons"><%= submit_tag("left") %>keyboard_arrow_right</i> </a></li>
-    <% end %>
+      <li><a class="btn-floating red"><i class="material-icons">keyboard_arrow_left</i></a></li>
+      <li><a  class="btn-floating yellow darken-1"><i class="material-icons">keyboard_arrow_right</i> </a></li>
     <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
     <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
   </ul>
