--- a/app/views/dashboard/_border_partial.html.erb
+++ b/app/views/dashboard/_border_partial.html.erb
@@ -1,19 +1,12 @@
-
-
 <div id="borde">
 </div>
-
-<%= link_to "rigth", :controller => "dashboard", :action => "right" %>
-
-<%= link_to "left", :controller => "dashboard", :action => :left %>
-
 <div class="fixed-action-btn horizontal">
   <a class="btn-floating btn-large red">
     <i class="large material-icons">mode_edit</i>
   </a>
   <ul>
-      <li><a class="btn-floating red"><%= link_to "l", :controller => "dashboard", :action => :left %><i class="material-icons">keyboard_arrow_left</i></a></li>
-      <li><a  class="btn-floating yellow darken-1"><%= link_to "left", :controller => "dashboard", :action => :right %><i class="material-icons">keyboard_arrow_right</i> </a></li>
+      <li><a href="<%= dashboard_left_path %>" class="btn-floating red"><i class="material-icons">keyboard_arrow_left</i></a></li>
+      <li><a href="<%= dashboard_right_path %>" class="btn-floating yellow darken-1"><i class="material-icons">keyboard_arrow_right</i> </a></li>
     <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
     <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
   </ul>
