--- a/app/views/dashboard/_border_partial.html.erb
+++ b/app/views/dashboard/_border_partial.html.erb
@@ -42,13 +42,12 @@
 <% end %>
 <div class="fixed-action-btn horizontal">
   <a class="btn-floating btn-large red">
-    <i class="large material-icons">mode_edit</i>
+    <i class="large material-icons">description</i>
   </a>
   <ul>
-      <li><a href="<%= dashboard_left_path %>" class="btn-floating red"><i class="material-icons">keyboard_arrow_left</i></a></li>
-      <li><a href="<%= dashboard_right_path %>" class="btn-floating yellow darken-1"><i class="material-icons">keyboard_arrow_right</i> </a></li>
-    <li><a class="btn-floating green"  onclick="showInputPage()"><i class="material-icons">publish</i></a></li>
-    <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+    <li><a href="<%= dashboard_left_path %>" class="btn-floating red"><i class="material-icons">keyboard_arrow_left</i></a></li>
+    <li><a class="btn-floating blue"><i class="material-icons">code</i></a></li>
+    <li><a href="<%= dashboard_right_path %>" class="btn-floating yellow darken-1"><i class="material-icons">keyboard_arrow_right</i> </a></li>
   </ul>
 </div>
 
