rename page html

--- a/app/views/dashboard/page4.html.erb
+++ b/app/views/dashboard/page4.html.erb
@@ -14,7 +14,7 @@
 <body>		
         <div class="row">
 		    <div class="col s12">
-               <div class="col s4 fullWidth fullHeight padding-top" 25px"><img src="../../src/img/go!.png" width="270" ></div><div class="col s1 fullWidth fullHeight"><img src="../../src/img/corchete1.png " height="100" text-align= "left"></div>
+               <div class="col s4 fullWidth fullHeight padding-top"><img src="../../src/img/go!.png" width="270" ></div><div class="col s1 fullWidth fullHeight"><img src="../../src/img/corchete1.png " height="100" text-align= "left"></div>
 			    <div class="col s6" style="">  <p class="text2">Este icono marca la diferencia pues representa y te recuerda quetienes la opción de dirigirte a nuestra plataforma virtual y poder seguir con tu avance de manera más interactiva y dinámica.</p>
 			    </div>
 								       
@@ -64,7 +64,7 @@
 	    </div>
 	    <div class="row">
 	        <div class="col s12">
-                <div class="col s4 fullWidth fullHeight padding-top" 25px"><img src="../../src/img/useful.png" width="270" ></div>	
+                <div class="col s4 fullWidth fullHeight padding-top"><img src="../../src/img/useful.png" width="270" ></div>
                 <div class="col s1 fullWidth fullHeight"><img src="../../src/img/corchete1.png " height="100" text-align= "left"></div>
 				<div class="col s6" style="">  <p class="text2">Este icono te muestra palabras no traducidas con su espectiva pronunciación (castellanizada) y su traducción.</p></div>								       
 			     <div class="col s1 fullWidth fullHeight" style="margin-right: -5px"><img src="../../src/img/corchete2.png" height="100" ></div>
