add button a pages finish 10

--- a/app/views/dashboard/page4.html.erb
+++ b/app/views/dashboard/page4.html.erb
@@ -11,7 +11,8 @@
 
 </head>
 
-<body>		
+<body>
+<%=render 'dashboard/border_partial'%>
         <div class="row">
 		    <div class="col s12">
                <div class="col s4 fullWidth fullHeight padding-top"><img src="../../src/img/go!.png" width="270" ></div><div class="col s1 fullWidth fullHeight"><img src="../../src/img/corchete1.png " height="100" text-align= "left"></div>
