--- a/app/views/dashboard/page5.html.erb
+++ b/app/views/dashboard/page5.html.erb
@@ -11,6 +11,7 @@
         </link>
     </head>
     <body>
+    <%=render 'dashboard/border_partial'%>
         <div class="container" style="">
             <!-- BEGIN YOU cONTENT -->
             <div class="" style="position: absolute;top: 70px;left: 210px;width: 200px;height: 100px;">
