--- a/app/views/dashboard/page7.html.erb
+++ b/app/views/dashboard/page7.html.erb
@@ -11,6 +11,7 @@
         </link>
     </head>
     <body>
+    <%=render 'dashboard/border_partial'%>
         <div class="container" style="background-color: #E3F3F8">
             <!-- BEGIN YOU cONTENT -->
             <div class="row fullWidth" style="margin-top: 30px">
