--- a/app/views/dashboard/page8.html.erb
+++ b/app/views/dashboard/page8.html.erb
@@ -11,6 +11,7 @@
         </link>
     </head>
     <body>
+    <%=render 'dashboard/border_partial'%>
         <div class="container" style="background-color: #E3F3F8">
             <!-- BEGIN YOU cONTENT -->
             <div class="row container-section z-depth-1" style="background: #F8F1F0; margin-top: 45px;">
