--- a/app/views/dashboard/page9.html.erb
+++ b/app/views/dashboard/page9.html.erb
@@ -11,6 +11,7 @@
         </link>
     </head>
     <body>
+    <%=render 'dashboard/border_partial'%>
         <div class="container ">
             <!-- BEGIN YOU cONTENT -->
             <div class="row container-section z-depth-1" style="background: #FBEEFF; margin-top: 100px;margin-right: -50px; ">
