--- a/app/views/dashboard/page10.html.erb
+++ b/app/views/dashboard/page10.html.erb
@@ -11,6 +11,7 @@
         </link>
     </head>
     <body>
+    <%=render 'dashboard/border_partial'%>
         <div class="container ">
             <!-- BEGIN YOU cONTENT -->
             <div class="row no-pm valign-wrapper">
