--- a/app/views/dashboard/page3.html.erb
+++ b/app/views/dashboard/page3.html.erb
@@ -8,6 +8,7 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     </head>
     <body>
+    <%=render 'dashboard/border_partial'%>
         <div class="container">
             <div class="row" id="container">
                 <div class="col s12" style="text-align:left;">
