--- a/app/views/diagram/index.html.erb
+++ b/app/views/diagram/index.html.erb
@@ -257,6 +257,17 @@
                       ])
                   });
       }
+
+      function save() {
+          document.getElementById("mySavedModel").value = myDiagram.model.toJson();
+          myDiagram.isModified = false;
+      }
+      function load() {
+          var model = go.Model.fromJson(document.getElementById("mySavedModel").value);
+          // establish GraphLinksModel functions:
+          // node data id's are odd numbers
+          myDiagram.model = model;
+      };
   </script>
 </head>
 <body onload="init()">
@@ -266,5 +277,32 @@
     <div id="myPaletteDiv" style="width: 100px; margin-right: 2px; background-color: whitesmoke; border: solid 1px black"></div>
     <div id="myDiagramDiv" style="flex-grow: 1; height: 720px; border: solid 1px black"></div>
   </div>
+  <button id="SaveButton" onclick="save()">Save</button>
+  <button onclick="load()">Load</button>
+  <textarea id="mySavedModel" style="width:100%;height:300px">{ "nodeKeyProperty": "id",
+  "linkKeyProperty": "id",
+  "nodeDataArray": [
+    { "id": 1, "loc": "120 120", "text": "Initial" },
+    { "id": 3, "loc": "330 120", "text": "First down" },
+    { "id": 5, "loc": "226 376", "text": "First up" },
+    { "id": 7, "loc": "60 276", "text": "Second down" },
+    { "id": 9, "loc": "226 226", "text": "Wait" }
+  ],
+  "linkDataArray": [
+    { "id": 2, "from": 1, "to": 1, "text": "up or timer", "curviness": -20 },
+    { "id": 4, "from": 1, "to": 3, "text": "down", "curviness": 20 },
+    { "id": 6, "from": 3, "to": 1, "text": "up (moved)\nPOST", "curviness": 20 },
+    { "id": 8, "from": 3, "to": 3, "text": "down", "curviness": -20 },
+    { "id": 10, "from": 3, "to": 5, "text": "up (no move)" },
+    { "id": 12, "from": 3, "to": 9, "text": "timer" },
+    { "id": 14, "from": 5, "to": 1, "text": "timer\nPOST" },
+    { "id": 16, "from": 5, "to": 7, "text": "down" },
+    { "id": 18, "from": 7, "to": 1, "text": "up\nPOST\n(dblclick\nif no move)" },
+    { "id": 20, "from": 7, "to": 7, "text": "down or timer", "curviness": 20 },
+    { "id": 22, "from": 9, "to": 1, "text": "up\nPOST" },
+    { "id": 24, "from": 9, "to": 9, "text": "down" }
+  ]
+}
+</textarea>
 </div>
 </body>
