--- a/app/views/diagram/index.html.erb
+++ b/app/views/diagram/index.html.erb
@@ -1,39 +1,44 @@
 <%= javascript_include_tag 'FileSaver', 'data-turbolinks-track': 'reload' %>
 <%= javascript_include_tag 'initDiagra', 'data-turbolinks-track': 'reload' %>
+<script>
+    var blobObject = null;
 
+    function createDownloadLink(anchorSelector, str, fileName){
+
+        if(window.navigator.msSaveOrOpenBlob) {
+            var fileData = [str];
+            blobObject = new Blob(fileData);
+            $(anchorSelector).click(function(){
+                window.navigator.msSaveOrOpenBlob(blobObject, fileName);
+            });
+        } else {
+            var url = "data:text/plain;charset=utf-8," + encodeURIComponent(str);
+            $(anchorSelector).attr("href", url);
+        }
+    }
+
+    $(function () {
+        var str = generateScript();
+        createDownloadLink("#export",str,"dinesh.txt");
+    });
+</script>
+<script>
+    $("#save-btn").click( function () {
+        download("txt.txt","jajajajja");
+    });
+</script>
 <body onload="init()">
 <div id="sample">
   <div style="width: 100%; display: flex; justify-content: space-between">
     <div id="myPaletteDiv" style="width: 100px; margin-right: 2px; background-color: whitesmoke; border: solid 1px black"></div>
     <div id="myDiagramDiv" style="flex-grow: 1; height: 720px; border: solid 1px black"></div>
   </div>
+  <a id="export" class="myButton" download="" href="#">export</a>
+  <button id="export" class="myButton" download="" href="#">Save file </button>
   <button id="SaveButton" onclick="save()">Save</button>
   <button onclick="load()">Load</button>
   <button onclick="generateScript()">generate script</button>
-  <textarea id="mySavedModel" style="width:100%;height:300px">{ "nodeKeyProperty": "id",
-  "linkKeyProperty": "id",
-  "nodeDataArray": [
-    { "id": 1, "loc": "120 120", "text": "Initial" },
-    { "id": 3, "loc": "330 120", "text": "First down" },
-    { "id": 5, "loc": "226 376", "text": "First up" },
-    { "id": 7, "loc": "60 276", "text": "Second down" },
-    { "id": 9, "loc": "226 226", "text": "Wait" }
-  ],
-  "linkDataArray": [
-    { "id": 2, "from": 1, "to": 1, "text": "up or timer", "curviness": -20 },
-    { "id": 4, "from": 1, "to": 3, "text": "down", "curviness": 20 },
-    { "id": 6, "from": 3, "to": 1, "text": "up (moved)\nPOST", "curviness": 20 },
-    { "id": 8, "from": 3, "to": 3, "text": "down", "curviness": -20 },
-    { "id": 10, "from": 3, "to": 5, "text": "up (no move)" },
-    { "id": 12, "from": 3, "to": 9, "text": "timer" },
-    { "id": 14, "from": 5, "to": 1, "text": "timer\nPOST" },
-    { "id": 16, "from": 5, "to": 7, "text": "down" },
-    { "id": 18, "from": 7, "to": 1, "text": "up\nPOST\n(dblclick\nif no move)" },
-    { "id": 20, "from": 7, "to": 7, "text": "down or timer", "curviness": 20 },
-    { "id": 22, "from": 9, "to": 1, "text": "up\nPOST" },
-    { "id": 24, "from": 9, "to": 9, "text": "down" }
-  ]
-}
-</textarea>
+  <textarea id="mySavedModel" style="width:100%;height:300px">
+  </textarea>
 </div>
 </body>
