--- a/app/views/diagram/index.html.erb
+++ b/app/views/diagram/index.html.erb
@@ -18,7 +18,7 @@
     }
 
     $(function () {
-        var str = generateScript();
+        var str = "hi,dinesh";
         createDownloadLink("#export",str,"dinesh.txt");
     });
 </script>
@@ -34,11 +34,39 @@
     <div id="myDiagramDiv" style="flex-grow: 1; height: 720px; border: solid 1px black"></div>
   </div>
   <a id="export" class="myButton" download="" href="#">export</a>
-  <button id="export" class="myButton" download="" href="#">Save file </button>
+  <button id="save-btn">Save file </button>
   <button id="SaveButton" onclick="save()">Save</button>
   <button onclick="load()">Load</button>
   <button onclick="generateScript()">generate script</button>
-  <textarea id="mySavedModel" style="width:100%;height:300px">
-  </textarea>
+  <textarea id="mySavedModel" style="width:100%;height:300px">{ "nodeKeyProperty": "id",
+  "linkKeyProperty": "id",
+  "nodeDataArray": [
+    { "id": 1, "loc": "120 120", "text": "Initial" },
+    { "id": 3, "loc": "330 120", "text": "First down" },
+    { "id": 5, "loc": "226 376", "text": "First up" },
+    { "id": 7, "loc": "60 276", "text": "Second down" },
+    { "id": 9, "loc": "226 226", "text": "Wait" }
+  ],
+  "linkDataArray": [
+    { "id": 2, "from": 1, "to": 1, "text": "up or timer", "curviness": -20 },
+    { "id": 4, "from": 1, "to": 3, "text": "down", "curviness": 20 },
+    { "id": 6, "from": 3, "to": 1, "text": "up (moved)\nPOST", "curviness": 20 },
+    { "id": 8, "from": 3, "to": 3, "text": "down", "curviness": -20 },
+    { "id": 10, "from": 3, "to": 5, "text": "up (no move)" },
+    { "id": 12, "from": 3, "to": 9, "text": "timer" },
+    { "id": 14, "from": 5, "to": 1, "text": "timer\nPOST" },
+    { "id": 16, "from": 5, "to": 7, "text": "down" },
+    { "id": 18, "from": 7, "to": 1, "text": "up\nPOST\n(dblclick\nif no move)" },
+    { "id": 20, "from": 7, "to": 7, "text": "down or timer", "curviness": 20 },
+    { "id": 22, "from": 9, "to": 1, "text": "up\nPOST" },
+    { "id": 24, "from": 9, "to": 9, "text": "down" }
+  ]
+}
+</textarea>
 </div>
+<form onsubmit="download(this['name'].value, this['text'].value)">
+  <input type="text" name="name" value="test.txt">
+  <textarea name="text"></textarea>
+  <input type="submit" value="Download">
+</form>
 </body>
